# pkcs11-proxy

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  config.h  egg-buffer.c  egg-buffer.h  gck-rpc-daemon-standalone.c  gck-rpc-dispatch.c  gck-rpc-layer.h  gck-rpc-message.c  gck-rpc-module.c  gck-rpc-private.h  gck-rpc-util.c
.github/workflows/: cmake.yml
debian/: changelog  copyright
pkcs11/: pkcs11.h  pkcs11f.h  pkcs11g.h  pkcs11i.h  pkcs11t.h
